--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     <div class="row">
 
 <div class="col-lg-7 py-vh-6 position-relative" data-aos="fade-right">
-  <h1 class="display-1 fw-bold mt-5">Hello Maks)</h1>
+  <h1 class="display-1 fw-bold mt-5">Когда запланирована поездка ?</h1>
   <p class="lead">To be honest, this is just a stupid placeholder text. We don´t know how to sell anything, not even lesser or slower as you.</p>
   <a href="#" class="btn btn-dark btn-xl shadow me-3 rounded-0 my-5">Get started free</a>
 </div>
